[package]
name = "eiger_interview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.47"

tokio = { version = "1.32.0", features = ["full"] }
sha2 = "0.10.7"
byteorder = "1.4.3"
async-trait = "0.1.73"
rand = "0.8.5"
