[package]
name = "blockchain_handshake"
version = "1.0.0"
edition = "2021"
authors = ["Felipe Silveira"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.47"

tokio = { version = "1.32.0", features = ["full"] }
sha2 = "0.10.7"
byteorder = "1.4.3"
rand = "0.8.5"
clap = { version = "4.4.4", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
base64 = "0.21.4"

[dev-dependencies]
